--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev ",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@kkiapay-org/nodejs-sdk": "^1.0.7",
     "@prisma/client": "^6.12.0",
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.10.0",
@@ -19,12 +18,12 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "mysql2": "^3.14.2",
-    "next": "^15.4.1",
+    "next": "^13.4.8",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
-    "react": "^19.1.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "uuid": "^11.1.0"
@@ -32,14 +31,15 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20.19.8",
+    "@types/next-auth": "^3.13.0",
+    "@types/node": "^20.19.9",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.8",
     "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^19.1.6",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9",
+    "eslint": "^9.31.0",
     "eslint-config-next": "15.4.1",
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.1",
@@ -47,6 +47,7 @@
     "prettier": "^3.6.2",
     "prisma": "^6.12.0",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
